--- a/250521/style.css
+++ b/250521/style.css
@@ -8,9 +8,10 @@
     border-radius: 2px !important;
     opacity: 1 !important;
     transition: background-color 0.3s ease !important;
-  }
+}
   
-  #carouselExampleAutoplaying .carousel-indicators .active {
-    background-color: #7a9ac9 !important;
+#carouselExampleAutoplaying .carousel-indicators .active {
+    background-color: #faa4a4 !important;
     border-color: #ffffff !important;
-  }
+}
+  
